docs/apache-airflow-providers-amazon/8.29.0/_sources/_api/airflow/providers/amazon/aws/auth_manager/aws_auth_manager/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.auth_manager.aws_auth_manager`
====================================================================

.. py:module:: airflow.providers.amazon.aws.auth_manager.aws_auth_manager


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.auth_manager.aws_auth_manager.AwsAuthManager



Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.auth_manager.aws_auth_manager.get_parser



.. py:class:: AwsAuthManager(appbuilder)


   Bases: :py:obj:`airflow.auth.managers.base_auth_manager.BaseAuthManager`

   AWS auth manager.

   Leverages AWS services such as Amazon Identity Center and Amazon Verified Permissions to perform
   authentication and authorization in Airflow.

   :param appbuilder: the flask app builder

   .. py:method:: avp_facade()


   .. py:method:: get_user()

      Return the user associated to the user in session.


   .. py:method:: is_logged_in()

      Return whether the user is logged in.


   .. py:method:: is_authorized_configuration(*, method, details = None, user = None)

      Return whether the user is authorized to perform a given action on configuration.

      :param method: the method to perform
      :param details: optional details about the configuration
      :param user: the user to perform the action on. If not provided (or None), it uses the current user


   .. py:method:: is_authorized_connection(*, method, details = None, user = None)

      Return whether the user is authorized to perform a given action on a connection.

      :param method: the method to perform
      :param details: optional details about the connection
      :param user: the user to perform the action on. If not provided (or None), it uses the current user


   .. py:method:: is_authorized_dag(*, method, access_entity = None, details = None, user = None)

      Return whether the user is authorized to perform a given action on a DAG.

      :param method: the method to perform
      :param access_entity: the kind of DAG information the authorization request is about.
          If not provided, the authorization request is about the DAG itself
      :param details: optional details about the DAG
      :param user: the user to perform the action on. If not provided (or None), it uses the current user


   .. py:method:: is_authorized_dataset(*, method, details = None, user = None)

      Return whether the user is authorized to perform a given action on a dataset.

      :param method: the method to perform
      :param details: optional details about the dataset
      :param user: the user to perform the action on. If not provided (or None), it uses the current user


   .. py:method:: is_authorized_pool(*, method, details = None, user = None)

      Return whether the user is authorized to perform a given action on a pool.

      :param method: the method to perform
      :param details: optional details about the pool
      :param user: the user to perform the action on. If not provided (or None), it uses the current user


   .. py:method:: is_authorized_variable(*, method, details = None, user = None)

      Return whether the user is authorized to perform a given action on a variable.

      :param method: the method to perform
      :param details: optional details about the variable
      :param user: the user to perform the action on. If not provided (or None), it uses the current user


   .. py:method:: is_authorized_view(*, access_view, user = None)

      Return whether the user is authorized to access a read-only state of the installation.

      :param access_view: the specific read-only view/state the authorization request is about.
      :param user: the user to perform the action on. If not provided (or None), it uses the current user


   .. py:method:: is_authorized_custom_view(*, method, resource_name, user = None)

      Return whether the user is authorized to perform a given action on a custom view.

      A custom view can be a view defined as part of the auth manager. This view is then only available when
      the auth manager is used as part of the environment. It can also be a view defined as part of a
      plugin defined by a user.

      :param method: the method to perform.
          The method can also be a string if the action has been defined in a plugin.
          In that case, the action can be anything (e.g. can_do).
          See https://github.com/apache/airflow/issues/39144
      :param resource_name: the name of the resource
      :param user: the user to perform the action on. If not provided (or None), it uses the current user


   .. py:method:: batch_is_authorized_connection(requests)

      Batch version of ``is_authorized_connection``.

      :param requests: a list of requests containing the parameters for ``is_authorized_connection``


   .. py:method:: batch_is_authorized_dag(requests)

      Batch version of ``is_authorized_dag``.

      :param requests: a list of requests containing the parameters for ``is_authorized_dag``


   .. py:method:: batch_is_authorized_pool(requests)

      Batch version of ``is_authorized_pool``.

      :param requests: a list of requests containing the parameters for ``is_authorized_pool``


   .. py:method:: batch_is_authorized_variable(requests)

      Batch version of ``is_authorized_variable``.

      :param requests: a list of requests containing the parameters for ``is_authorized_variable``


   .. py:method:: filter_permitted_dag_ids(*, dag_ids, methods = None, user=None)

      Filter readable or writable DAGs for user.

      :param dag_ids: the list of DAG ids
      :param methods: whether filter readable or writable
      :param user: the current user


   .. py:method:: filter_permitted_menu_items(menu_items)

      Filter menu items based on user permissions.

      :param menu_items: list of all menu items


   .. py:method:: get_url_login(**kwargs)

      Return the login page url.


   .. py:method:: get_url_logout()

      Return the logout page url.


   .. py:method:: security_manager()

      Return the security manager.

      By default, Airflow comes with the default security manager
      ``airflow.www.security_manager.AirflowSecurityManagerV2``. The auth manager might need to extend this
      default security manager for its own purposes.

      By default, return the default AirflowSecurityManagerV2.


   .. py:method:: get_cli_commands()
      :staticmethod:

      Vends CLI commands to be included in Airflow CLI.


   .. py:method:: register_views()

      Register views specific to the auth manager.



.. py:function:: get_parser()

   Generate documentation; used by Sphinx argparse.


